src/snapshots/prql__parser__test__inline_pipeline.snap
---
source: src/parser.rs
assertion_line: 844
expression: "parse_tree_of_str(\"(salary | percentile 50)\", Rule::inline_pipeline)?"
---
[
    Pair {
        rule: inline_pipeline,
        span: Span {
            str: "(salary | percentile 50)",
            start: 0,
            end: 24,
        },
        inner: [
            Pair {
                rule: expr,
                span: Span {
                    str: "salary ",
                    start: 1,
                    end: 8,
                },
                inner: [
                    Pair {
                        rule: terms,
                        span: Span {
                            str: "salary ",
                            start: 1,
                            end: 8,
                        },
                        inner: [
                            Pair {
                                rule: ident,
                                span: Span {
                                    str: "salary",
                                    start: 1,
                                    end: 7,
                                },
                                inner: [],
                            },
                        ],
                    },
                ],
            },
            Pair {
                rule: expr,
                span: Span {
                    str: "percentile 50",
                    start: 10,
                    end: 23,
                },
                inner: [
                    Pair {
                        rule: terms,
                        span: Span {
                            str: "percentile 50",
                            start: 10,
                            end: 23,
                        },
                        inner: [
                            Pair {
                                rule: ident,
                                span: Span {
                                    str: "percentile",
                                    start: 10,
                                    end: 20,
                                },
                                inner: [],
                            },
                            Pair {
                                rule: number,
                                span: Span {
                                    str: "50",
                                    start: 21,
                                    end: 23,
                                },
                                inner: [],
                            },
                        ],
                    },
                ],
            },
        ],
    },
]
