src/snapshots/prql__parser__test__parse_function.snap
---
source: src/parser.rs
assertion_line: 630
expression: "parse_tree_of_str(\"func plus_one x = x + 1\", Rule::function)?"
---
[
    Pair {
        rule: function,
        span: Span {
            str: "func plus_one x = x + 1",
            start: 0,
            end: 23,
        },
        inner: [
            Pair {
                rule: idents,
                span: Span {
                    str: "plus_one x",
                    start: 5,
                    end: 15,
                },
                inner: [
                    Pair {
                        rule: ident,
                        span: Span {
                            str: "plus_one",
                            start: 5,
                            end: 13,
                        },
                        inner: [],
                    },
                    Pair {
                        rule: ident,
                        span: Span {
                            str: "x",
                            start: 14,
                            end: 15,
                        },
                        inner: [],
                    },
                ],
            },
            Pair {
                rule: items,
                span: Span {
                    str: "x ",
                    start: 18,
                    end: 20,
                },
                inner: [
                    Pair {
                        rule: ident,
                        span: Span {
                            str: "x",
                            start: 18,
                            end: 19,
                        },
                        inner: [],
                    },
                ],
            },
            Pair {
                rule: operator,
                span: Span {
                    str: "+",
                    start: 20,
                    end: 21,
                },
                inner: [],
            },
            Pair {
                rule: items,
                span: Span {
                    str: "1",
                    start: 22,
                    end: 23,
                },
                inner: [
                    Pair {
                        rule: number,
                        span: Span {
                            str: "1",
                            start: 22,
                            end: 23,
                        },
                        inner: [],
                    },
                ],
            },
        ],
    },
]
