src/snapshots/prql__parser__test__parse_into_parse_tree-2.snap
---
source: src/parser.rs
assertion_line: 774
expression: "parse_tree_of_str(\"select [a, b, c]\", Rule::transformation)?"
---
[
    Pair {
        rule: transformation,
        span: Span {
            str: "select [a, b, c]",
            start: 0,
            end: 16,
        },
        inner: [
            Pair {
                rule: ident,
                span: Span {
                    str: "select",
                    start: 0,
                    end: 6,
                },
                inner: [],
            },
            Pair {
                rule: expr,
                span: Span {
                    str: "[a, b, c]",
                    start: 7,
                    end: 16,
                },
                inner: [
                    Pair {
                        rule: terms,
                        span: Span {
                            str: "[a, b, c]",
                            start: 7,
                            end: 16,
                        },
                        inner: [
                            Pair {
                                rule: list,
                                span: Span {
                                    str: "[a, b, c]",
                                    start: 7,
                                    end: 16,
                                },
                                inner: [
                                    Pair {
                                        rule: expr,
                                        span: Span {
                                            str: "a",
                                            start: 8,
                                            end: 9,
                                        },
                                        inner: [
                                            Pair {
                                                rule: terms,
                                                span: Span {
                                                    str: "a",
                                                    start: 8,
                                                    end: 9,
                                                },
                                                inner: [
                                                    Pair {
                                                        rule: ident,
                                                        span: Span {
                                                            str: "a",
                                                            start: 8,
                                                            end: 9,
                                                        },
                                                        inner: [],
                                                    },
                                                ],
                                            },
                                        ],
                                    },
                                    Pair {
                                        rule: expr,
                                        span: Span {
                                            str: "b",
                                            start: 11,
                                            end: 12,
                                        },
                                        inner: [
                                            Pair {
                                                rule: terms,
                                                span: Span {
                                                    str: "b",
                                                    start: 11,
                                                    end: 12,
                                                },
                                                inner: [
                                                    Pair {
                                                        rule: ident,
                                                        span: Span {
                                                            str: "b",
                                                            start: 11,
                                                            end: 12,
                                                        },
                                                        inner: [],
                                                    },
                                                ],
                                            },
                                        ],
                                    },
                                    Pair {
                                        rule: expr,
                                        span: Span {
                                            str: "c",
                                            start: 14,
                                            end: 15,
                                        },
                                        inner: [
                                            Pair {
                                                rule: terms,
                                                span: Span {
                                                    str: "c",
                                                    start: 14,
                                                    end: 15,
                                                },
                                                inner: [
                                                    Pair {
                                                        rule: ident,
                                                        span: Span {
                                                            str: "c",
                                                            start: 14,
                                                            end: 15,
                                                        },
                                                        inner: [],
                                                    },
                                                ],
                                            },
                                        ],
                                    },
                                ],
                            },
                        ],
                    },
                ],
            },
        ],
    },
]
