src/snapshots/prql__parser__test__parse_into_parse_tree-6.snap
---
source: src/parser.rs
assertion_line: 790
expression: "parse_tree_of_str(r#\"[\n  gross_salary: salary + payroll_tax,\n  gross_cost:   gross_salary + benefits_cost\n]\"#,\n        Rule::list)?"
---
[
    Pair {
        rule: list,
        span: Span {
            str: "[\n  gross_salary: salary + payroll_tax,\n  gross_cost:   gross_salary + benefits_cost\n]",
            start: 0,
            end: 86,
        },
        inner: [
            Pair {
                rule: expr,
                span: Span {
                    str: "gross_salary: salary + payroll_tax",
                    start: 4,
                    end: 38,
                },
                inner: [
                    Pair {
                        rule: items,
                        span: Span {
                            str: "gross_salary: salary + payroll_tax",
                            start: 4,
                            end: 38,
                        },
                        inner: [
                            Pair {
                                rule: assign,
                                span: Span {
                                    str: "gross_salary: salary + payroll_tax",
                                    start: 4,
                                    end: 38,
                                },
                                inner: [
                                    Pair {
                                        rule: ident,
                                        span: Span {
                                            str: "gross_salary",
                                            start: 4,
                                            end: 16,
                                        },
                                        inner: [],
                                    },
                                    Pair {
                                        rule: expr,
                                        span: Span {
                                            str: "salary + payroll_tax",
                                            start: 18,
                                            end: 38,
                                        },
                                        inner: [
                                            Pair {
                                                rule: items,
                                                span: Span {
                                                    str: "salary ",
                                                    start: 18,
                                                    end: 25,
                                                },
                                                inner: [
                                                    Pair {
                                                        rule: ident,
                                                        span: Span {
                                                            str: "salary",
                                                            start: 18,
                                                            end: 24,
                                                        },
                                                        inner: [],
                                                    },
                                                ],
                                            },
                                            Pair {
                                                rule: operator,
                                                span: Span {
                                                    str: "+",
                                                    start: 25,
                                                    end: 26,
                                                },
                                                inner: [],
                                            },
                                            Pair {
                                                rule: items,
                                                span: Span {
                                                    str: "payroll_tax",
                                                    start: 27,
                                                    end: 38,
                                                },
                                                inner: [
                                                    Pair {
                                                        rule: ident,
                                                        span: Span {
                                                            str: "payroll_tax",
                                                            start: 27,
                                                            end: 38,
                                                        },
                                                        inner: [],
                                                    },
                                                ],
                                            },
                                        ],
                                    },
                                ],
                            },
                        ],
                    },
                ],
            },
            Pair {
                rule: expr,
                span: Span {
                    str: "gross_cost:   gross_salary + benefits_cost",
                    start: 42,
                    end: 84,
                },
                inner: [
                    Pair {
                        rule: items,
                        span: Span {
                            str: "gross_cost:   gross_salary + benefits_cost",
                            start: 42,
                            end: 84,
                        },
                        inner: [
                            Pair {
                                rule: assign,
                                span: Span {
                                    str: "gross_cost:   gross_salary + benefits_cost",
                                    start: 42,
                                    end: 84,
                                },
                                inner: [
                                    Pair {
                                        rule: ident,
                                        span: Span {
                                            str: "gross_cost",
                                            start: 42,
                                            end: 52,
                                        },
                                        inner: [],
                                    },
                                    Pair {
                                        rule: expr,
                                        span: Span {
                                            str: "gross_salary + benefits_cost",
                                            start: 56,
                                            end: 84,
                                        },
                                        inner: [
                                            Pair {
                                                rule: items,
                                                span: Span {
                                                    str: "gross_salary ",
                                                    start: 56,
                                                    end: 69,
                                                },
                                                inner: [
                                                    Pair {
                                                        rule: ident,
                                                        span: Span {
                                                            str: "gross_salary",
                                                            start: 56,
                                                            end: 68,
                                                        },
                                                        inner: [],
                                                    },
                                                ],
                                            },
                                            Pair {
                                                rule: operator,
                                                span: Span {
                                                    str: "+",
                                                    start: 69,
                                                    end: 70,
                                                },
                                                inner: [],
                                            },
                                            Pair {
                                                rule: items,
                                                span: Span {
                                                    str: "benefits_cost",
                                                    start: 71,
                                                    end: 84,
                                                },
                                                inner: [
                                                    Pair {
                                                        rule: ident,
                                                        span: Span {
                                                            str: "benefits_cost",
                                                            start: 71,
                                                            end: 84,
                                                        },
                                                        inner: [],
                                                    },
                                                ],
                                            },
                                        ],
                                    },
                                ],
                            },
                        ],
                    },
                ],
            },
        ],
    },
]
