src/snapshots/prql__parser__test__parse_into_parse_tree-7.snap
---
source: src/parser.rs
assertion_line: 739
expression: "parse_tree_of_str(r#\"# this is a comment\n        select a\"#, Rule::COMMENT)?"

---
[]
